# bmjap

./: .gitmodules  CMakeLists.txt  README.md
assets/: C3.aif  MacOSXBundleInfo.plist.in  icon.icns
lib/fftw3/: fftw3.h
src/: CMakeLists.txt  audio_client.cpp  audio_client.hpp  envelope_detect.cpp  envelope_detect.hpp  fft.cpp  fft.hpp  levels.cpp  levels.hpp  load_audio_asset.cpp  load_audio_asset.hpp  main.cpp  peak_image.cpp  peak_image.hpp  pitch_detect.cpp  pitch_detect.hpp  stb_vorbis.c  window_reader.cpp  window_reader.hpp
src/data_types/: Area.hpp  CMakeLists.txt  RingBuffer.hpp  StereoBuffer.hpp  ring_buffer.cpp  ring_buffer.hpp
